--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AT-UI Boilerplate</title>
+  <!--<script type="text/javascript" src="firebug-lite.js"></script>-->
 </head>
 <body>
   <div id="app"></div>
