--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AT-UI Boilerplate</title>
+  <title>图码联侦综合分析系统</title>
   <!--<script type="text/javascript" src="firebug-lite.js"></script>-->
 </head>
-<body>
+<body topmargin="0" oncontextmenu="return false" ondragstart="return false">
   <div id="app"></div>
 </body>
 </html>
